Name:                accelerate-fluid
Version:             0.1.0.0
Synopsis:            A fluid simulation written in Accelerate
Description:         A fluid simulation written in Accelerate
License:             BSD3
License-file:        LICENSE
Author:              Ben Lambert-Smith and Trevor L. McDonell
Maintainer:          Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>

Category:            Game
Build-type:          Simple
Cabal-version:       >=1.6


Flag cuda
  Description:          Enable CUDA backend
  Default:              True

Executable accelerate-fluid
  Main-is:              Main.hs
  hs-source-dirs:       src
  ghc-options:          -O2 -Wall -rtsopts

  if flag(cuda)
    cpp-options:        -DACCELERATE_CUDA_BACKEND
    build-depends:      accelerate-cuda >= 0.9

  Build-depends:        accelerate      >= 0.9,
                        accelerate-io   >= 0.9,
                        base            == 4.*,
                        bmp             >= 1.2,
                        criterion       >= 0.5,
                        fclabels        >= 1.0,
                        gloss           >= 1.7

