name:                   accelerate-kmeans
version:                0.1.0.0
synopsis:               An implementation of k-means clustering in Accelerate
-- description:
-- license:
-- license-file:
author:                 Trevor L. McDonell
maintainer:             tmcdonell@nvidia.com
-- copyright:
category:               Math
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

library
  exposed-modules:      Data.Array.Accelerate.Math.Kmeans

  build-depends:        base            >= 4.6 && <4.7,
                        accelerate      == 0.15.*

  ghc-options:          -Wall -O2 -dcore-lint

  default-language:     Haskell2010


executable generate-samples
  Main-is:              GenSamples.hs
  other-modules:        TestCore
  hs-source-dirs:       test
  ghc-options:          -Wall -O2 -dcore-lint
  default-language:     Haskell2010

  build-depends:        base            >= 4.6 && <4.7,
                        array,
                        binary,
                        normaldistribution,
                        random

