Name:                   accelerate-ray
Version:                0.1.0.0
Synopsis:               A simple ray-tracer written in Accelerate
Description:            A simple ray-tracer written in Accelerate
License:                BSD3
License-file:           LICENSE
Author:                 Trevor L. McDonell
Maintainer:             tmcdonell@cse.unsw.edu.au
Category:               Compilers/Interpreters, Concurrency, Data, Parallelism
Build-type:             Simple
Cabal-version:          >=1.10

Flag gui
  Description:          Enable gloss-based GUIs, where applicable. If not
                        enabled, the application always runs in benchmark mode.
  Default:              True

Flag ekg
  Description:          Enable EKG remote monitoring server at <http://localhost:8000>
  Default:              True

Flag cuda
  Description:          Enable the CUDA parallel backend for NVIDIA GPUs
  Default:              True


Executable accelerate-ray
  Main-is:              Main.hs
  hs-source-dirs:       lib .
  default-language:     Haskell2010

  Other-modules:

  Build-depends:
        base                    == 4.6.*,
        accelerate              == 0.15.*,
        criterion               >= 0.5,
        fclabels                >= 1.0,
        gloss                   == 1.8.*,
        gloss-accelerate        == 1.8.*,
        gloss-raster-accelerate == 1.8.*

  if flag(cuda)
    CPP-options:        -DACCELERATE_CUDA_BACKEND
    build-depends:      accelerate-cuda                 >= 0.15

  if flag(ekg)
    CPP-options:        -DACCELERATE_ENABLE_EKG
    build-depends:      ekg                             >= 0.3
    ghc-options:        -with-rtsopts=-T

  ghc-options:
        -Wall -O2 -threaded

  if impl(ghc >= 7.0)
    ghc-options:        -rtsopts

-- vim: nospell
